Removed unnecessary files

--- a/config/application.properties
+++ b/config/application.properties
@@ -1,8 +1,7 @@
 server.port=8001
-server.ssl.key-store=keystore.p12
-server.ssl.key-store-password=cartos-pricing-engine
-server.ssl.keyStoreType=PKCS12
-server.ssl.keyAlias=tomcat
+server.ssl.key-store=keystore.jks
+server.ssl.key-store-password=gully-sports
+server.ssl.keyAlias=mydomain
 trust_to_certs=true
 
 spring.data.mongodb.uri=mongodb://mySportsUser:root.pwd@localhost:27017/mySportsDB
