--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ buildscript {
 }
 
 version = '1.0'
-def moduleName = "MySports"
+def moduleName = "GullySports"
 
 apply plugin: 'java'
 apply plugin: 'eclipse'
@@ -21,7 +21,7 @@ apply plugin: 'maven'
 
 
 bootRepackage {
-    mainClass = 'com.itt.Application'
+    mainClass = 'com.gullysports.Application'
 }
 
 jar {
@@ -42,12 +42,8 @@ targetCompatibility = 1.8
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-data-mongodb:1.5.9.RELEASE")
     compile("org.springframework.boot:spring-boot-starter-web:1.5.8.RELEASE")
-    compile "io.springfox:springfox-swagger2:2.7.0"
-    compile 'io.springfox:springfox-swagger-ui:2.7.0'
-    compile 'org.mock-server:mockserver-netty:5.2.3'
-    testCompile group: "de.flapdoodle.embed", name: "de.flapdoodle.embed.mongo", version: "2.0.0"
-    testCompile group: "cz.jirutka.spring", name: "embedmongo-spring", version: "1.3.1"
-    testCompile("org.springframework.boot:spring-boot-starter-test:1.5.8.RELEASE")
+    compile("io.springfox:springfox-swagger2:2.7.0")
+    compile("io.springfox:springfox-swagger-ui:2.7.0")
 }
 
 
@@ -55,34 +51,18 @@ dependencies {
 task writeNewPom << {
     pom {
         project {
-            groupId 'com.itt.jmtemplate'
-            artifactId 'Cartos'
+            groupId 'com.gullysports'
+            artifactId 'GullySports'
             version '1.0.0'
         
             inceptionYear '2017'
             licenses {
                 license {
-                    name 'InTimeTec License'
-                    url 'http://www.intimetec.com'
-                    distribution 'repo'
+                    name 'GullySports License'
+                    url ''
+                    distribution 'repository'
                 }
             }
         }
     }.writeTo("pom.xml")
 }
-
-task createDist{
-	println "Current version:${version} buildDir:${buildDir}"
-	copy{
- 		into ("${projectDir}/dist/")
-		from ("${projectDir}/config/application.properties")
-	}
-	copy{
- 		into ("${projectDir}/dist/")
-		from ("${projectDir}/keystore.p12")
-	}
-}
-build {
-       finalizedBy createDist
-}
-
