--- a/build.gradle
+++ b/build.gradle
@@ -40,9 +40,11 @@ sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 dependencies {
-    compile("org.springframework.boot:spring-boot-starter-data-mongodb:1.5.9.RELEASE")
+    compile("org.springframework.boot:spring-boot-starter-data-mongodb:1.5.9.RELEASE"){
+        exclude module : "spring-boot-starter-logging"
+    }
     compile("org.springframework.boot:spring-boot-starter-web:1.5.8.RELEASE"){
-        exclude module: "org.springframework.boot:spring-boot-starter-logging"
+        exclude module : "spring-boot-starter-logging"
     }
     compile("io.springfox:springfox-swagger2:2.7.0")
     compile("io.springfox:springfox-swagger-ui:2.7.0")
